--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,67 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.heading {
+  position: fixed;
+  width:100%;
+  background-color: rgb(13, 103, 238);
+  color: rgb(32, 6, 6);
+  text-align: start;
+  font-family: 'italic';
+  padding-left: 1rem;
+  z-index: 100;
+  box-shadow: 1px 12px 5px 0px rgba(0,0,0,0.75);
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
+
+  background-color: rgba(212, 28, 166, 0.966);
+  color: white;
+}
+.home {
+  position: relative;
+  top: 5rem;
+  margin-bottom: 8rem;
+  
+}
+.main {
+  /* margin-top: 4rem; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-top: 2rem;
+  
+}
+
+.card {
+  display: inline-block;
+  border: 1px solid rgba(211, 211, 211, 0.384);
+  margin: 12px;
+  padding: 2px;
+  background-color: white;
+  box-shadow: 3px 3px 3px 0px rgb(0 0 0 / 40%);
+  width: 220px;
+}
+.card__img {
+  object-fit: cover;
+  height: 260px;
+  width: 100%;
+}
+
+.card__details {
+  padding: 10px;
+  height: 15px;
+  margin-left: -11px;
+}
+
+
+.card__content {
+  display: flex;
+  font-family: sans-serif;
+
+  
+}
