--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.App {
+  background-color: rgb(247, 243, 243);
+  height: 100vh; 
+}
+.App__toogle {
+  background-color: rgb(24, 21, 21);
+  height: 100vh; 
+}
 
 .heading {
   position: fixed;
   width:100%;
+  height: 4rem;
   background-color: rgb(13, 103, 238);
   color: rgb(32, 6, 6);
   text-align: start;
@@ -22,32 +31,60 @@ code {
   padding-left: 1rem;
   z-index: 100;
   box-shadow: 1px 12px 5px 0px rgba(0,0,0,0.75);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.heading__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  right: 4rem;
+  background-color: white;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  cursor: pointer;
 }
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 2rem;
-
   background-color: rgba(212, 28, 166, 0.966);
   color: white;
+}
+.App__home {
+  /* background-color: yellowgreen; */
+  height: 100%;
+  width: 100%;
 }
 .home {
   position: relative;
   top: 5rem;
-  margin-bottom: 8rem;
-  
+  height: 100%;
+  width: 100%;
 }
 .main {
-  /* margin-top: 4rem; */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   padding-top: 2rem;
-  
+
 }
 
 .card {
+  display: inline-block;
+  border: 1px solid rgba(211, 211, 211, 0.384);
+  margin: 12px;
+  padding: 2px;
+  background-color: rgb(19, 12, 12);
+  box-shadow: 3px 3px 3px 0px rgb(0 0 0 / 40%);
+  width: 220px;
+}
+.card__toggle {
   display: inline-block;
   border: 1px solid rgba(211, 211, 211, 0.384);
   margin: 12px;
@@ -72,6 +109,12 @@ code {
 .card__content {
   display: flex;
   font-family: sans-serif;
-
-  
+  color: white;
+  padding-left: 10px;
+}
+.card__content__toggle {
+  display: flex;
+  font-family: sans-serif;
+  color: black;
+  padding-left: 10px;
 }
